samples/_failures_safe/1761274702_91d5f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9d85869.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a9d85869.c:167:5: error: expected ‘,’ or ‘;’ at end of input
  167 |     int column = 1
      |     ^~~
./samples/SAFE/__tmp_a9d85869.c:167:5: error: expected declaration or statement at end of input
